# kvcache

./: .gitignore  Makefile  README.md
.github/workflows/: ci.yml
docs/architecture/: README.md  cmx-integration.md  integration-stack.md  system-overview.md
docs/design/: ss2-spike-q3-verdict.md
docs/superpowers/plans/: 2026-07-02-a10-production-wiring.md  (+3 more)
src/: CMakeLists.txt  README.md
src/adapters/: conftest.py
src/adapters/aibrix/: README.md  pyproject.toml
src/adapters/aibrix/kvcache_aibrix/: __init__.py  backend.py
src/adapters/aibrix/tests/: test_aibrix_backend.py  test_aibrix_compress.py
src/adapters/core/: README.md  pyproject.toml
src/adapters/core/kvcache_core/: __init__.py  _ffi.py  connector.py  kv_compress.py
src/adapters/sglang/: README.md
src/adapters/sglang/kvcache_sglang/: __init__.py  async_load.py  backend.py
src/adapters/sglang/tests/: test_sglang_async.py  test_sglang_backend.py
src/adapters/vllm/: pyproject.toml
src/adapters/vllm/kvcache_vllm/: __init__.py  connector.py  layer_accumulator.py  vllm_bridge.py
src/adapters/vllm/tests/: test_vllm_bridge.py  test_vllm_compress.py  test_vllm_connector.py
src/bench/: CMakeLists.txt  bench_fairness.cpp  bench_priority.cpp
src/control-plane/: go.mod  go.sum
src/control-plane/cmd/cp/: main.go
src/control-plane/internal/membership/: drain.go  drain_test.go  registry.go  sketch.go  sketch_test.go  view.go
src/control-plane/internal/server/: server.go  server_test.go
src/core-abi/: CMakeLists.txt
src/core-abi/src/: ctx_options.cpp  ctx_options.h  headless_node.cpp  headless_node.h  kv_abi.cpp
src/core-abi/src/replication/: replica_source.h  replication_consumer.cpp  replication_consumer.h
src/core/common/: CMakeLists.txt  blake3.cpp  hashing.cpp  log_sink.cpp  log_sink.h  logging.cpp  logging.h  state_identity.h  trace.h  trace_otlp.cpp  value_policy_persistent_stub.h  value_policy_persistent_wal.cpp  value_policy_persistent_wal.h
src/core/proto/: CMakeLists.txt  cp.proto  node.proto
src/deploy/docker/: Dockerfile.cp  Dockerfile.kvstore-node
src/include/kvcache/: kv_abi.h  kv_types.h  shmem_wire.h
src/kvagent/: CMakeLists.txt
src/kvagent/src/: main.cpp
src/kvagent/src/bloom_view/: bloom_view.cpp  bloom_view.h
src/kvagent/src/router/: cluster_view.cpp  cluster_view.h  etcd_view_loader.cpp  etcd_view_loader.h  hrw_resolver.cpp  hrw_resolver.h
src/kvagent/src/routing_cache/: routing_cache.cpp  routing_cache.h
src/kvagent/src/shmem_ring/: doorbell.cpp  doorbell.h  sq_cq.cpp  sq_cq.h
src/kvctl/: README.md  go.mod  go.sum
src/kvctl/cmd/kvctl/: main.go  main_test.go
src/kvstore-node/: CMakeLists.txt
src/kvstore-node/src/: main.cpp
src/kvstore-node/src/cluster/: bloom_publisher.cpp  bloom_publisher.h  etcd_client.cpp  etcd_client.h  http_etcd_client.cpp  membership_fsm.cpp  membership_fsm.h
src/kvstore-node/src/codec/: kv_tensor_codec.cpp  kv_tensor_codec.h
src/kvstore-node/src/grpc/: grpc_server.cpp  grpc_server.h  node_data_service.cpp  node_data_service.h
src/kvstore-node/src/meta/: rocksdb_store.cpp  rocksdb_store.h
src/kvstore-node/src/obs/: logs.cpp  logs.h
src/kvstore-node/src/prefix/: art_index.cpp  art_index.h  art_index_internal.h  art_snapshot.cpp  art_snapshot.h  art_wal.cpp  art_wal.h  lpm.cpp  lpm.h  refcount.cpp  refcount.h
src/kvstore-node/src/qos/: quota.cpp  quota.h
src/kvstore-node/src/replication/: replication_cursor.h  warm_filter.h
src/kvstore-node/src/routing/: hrw.cpp  hrw.h
src/kvstore-node/src/runtime/: node_runtime.cpp  node_runtime.h
src/kvstore-node/src/security/: boundary_guard.cpp  boundary_guard.h  mtls.cpp  mtls.h  rbac.cpp  rbac.h
src/kvstore-node/src/tier/: cold_tier.cpp  cold_tier.h  dram_tier.cpp  dram_tier.h  guarded_transport.cpp  guarded_transport.h  nvme_tier.cpp  nvme_tier.h  pinned_tier.cpp  pinned_tier.h  tier_manager.cpp
src/kvstore-node/src/transport/: nixl_wrapper.cpp  nixl_wrapper.h  tcp_backend.cpp  tcp_backend.h  ucx_backend.cpp  ucx_backend.h
src/operator/: README.md  go.mod  go.sum
src/operator/api/v1alpha1/: kvcachecluster_types.go  zz_generated.deepcopy.go
src/operator/cmd/manager/: main.go
src/operator/config/crd/: kvcacheclusters.kvcache.alluxio.io.yaml  kvcachetenants.kvcache.alluxio.io.yaml
src/operator/internal/controller/: etcd_status.go  kvcachecluster_controller.go  kvcachecluster_controller_test.go  kvcachetenant_controller.go  kvcachetenant_controller_test.go  resources.go  tenant_publisher.go  tls.go
src/operator/test/e2e/: e2e_test.go  kind-config.yaml  run.sh
src/tests/unit/: CMakeLists.txt
src/tests/unit/abi/: ctx_options_test.cpp  reserve_backpressure_test.cpp
src/tests/unit/cluster/: grpc_etcd_client_test.cpp  http_etcd_client_test.cpp  node_registry_test.cpp
src/tests/unit/codec/: kv_tensor_codec_test.cpp
src/tests/unit/common/: log_sink_test.cpp  state_identity_test.cpp  state_identity_toolresult_test.cpp
src/tests/unit/grpc/: cross_process_pull_test.cpp  grpc_server_tls_test.cpp  lookup_forwarding_test.cpp  node_data_service_test.cpp  replica_fetch_rpc_test.cpp
src/tests/unit/kvagent/: bloom_view_test.cpp  cluster_view_test.cpp  doorbell_test.cpp  etcd_view_loader_test.cpp  hrw_resolver_test.cpp  routing_cache_test.cpp  sq_cq_test.cpp
src/tests/unit/meta/: rocksdb_store_test.cpp
src/tests/unit/obs/: logs_test.cpp  trace_otlp_test.cpp
src/tests/unit/policy/: value_policy_ab_contrast_test.cpp  value_policy_persistent_wal_test.cpp
src/tests/unit/prefix/: art_index_test.cpp  art_snapshot_test.cpp  art_wal_test.cpp  refcount_test.cpp
src/tests/unit/replication/: replica_fetch_test.cpp  replication_consumer_test.cpp  seal_by_chunk_path_test.cpp  warm_filter_test.cpp
src/tests/unit/security/: boundary_guard_test.cpp  mtls_test.cpp
src/tests/unit/tier/: cold_tier_guard_test.cpp  dram_tier_evict_kind_test.cpp  guarded_transport_test.cpp  nvme_tier_test.cpp  pinned_tier_test.cpp
src/tests/unit/transport/: nixl_wrapper_test.cpp  priority_scheduler_test.cpp  tcp_backend_test.cpp  ucx_backend_test.cpp
(+2 files in other folders)
