[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kvcache-aibrix-adapter"
version = "0.1.0"
description = "aibrix adapter for KV Cache (calls libkvcache.so via cffi)"
requires-python = ">=3.10"
dependencies = ["kvcache-core"]

[tool.setuptools.packages.find]
where = ["."]
