[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kvcache-core"
version = "0.1.0"
description = "Engine-agnostic Python wrapper around the KV Cache Core ABI (cffi)"
requires-python = ">=3.10"
dependencies = ["cffi>=1.16"]

[tool.setuptools.packages.find]
where = ["."]
