[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kvcache-vllm-adapter"
version = "0.1.0"
description = "vLLM KVConnectorBase adapter for KV Cache (calls libkvcache.so via cffi)"
requires-python = ">=3.10"
dependencies = [
    "kvcache-core",  # provides cffi + the engine-agnostic Connector
    # "vllm>=0.6.0",  # uncomment once pinning is decided
]

[tool.setuptools.packages.find]
where = ["."]
